Changelog Acumulus web shop extensions
======================================

This file contains a historical overview of changes in our code.

8.3.7 (2024-12-??)
------------------
Bugs:
- ALL: Voucher lines should always get vat free and not 0%.

Refactorings:
- ALL: Renamed Source::getTypeLabel() to Source::GetLabel(): Check your mappings!
- Converted legacy completors in Invoice namespace from array to object use, including new
  methods on AcumulusObjects and deep cloning them.


8.3.6 (2024-11-27)
------------------
Bugs:
- ALL: TypeError: Siel\Acumulus\Helpers\Form::getAboutBlock(): Argument #1
  ($accountStatus) must be of type ?bool, string given.
- WC: Division by zero in WooCommerce/Collectors/ItemLineCollector.php:72
- ALL: TypeError: Siel\Acumulus\Helpers\FormRenderer::addAttribute(): Argument #3 ($value)
  must be of type array|string|bool|null, int given, called in Helpers/FormRenderer.php on
  line 427 and defined in Helpers/FormRenderer.php:712.
- Form rendering: we encountered some:
  - Violations against the HTML specifications
  - Missing id attributes on `<fieldset>`s, `<summary>`s, and on the wrapper around radio
    buttons and checkboxes. By adding this attribute, they can be individually addressed
    by CSS.
  - Typos.

Testing:
- Added integration tests for our forms (creation, field definitions and rendering). This
  might help preventing bugs like the TypeError in the FormRenderer (see above).

Refactorings:
- Basic submit structure now created and collected as an AcumulusObject.
- Basic stock management added but not yet operational.
- A lot of ongoing refactorings: clean-up, removing old example code, ...

8.3.5 (2024-11-01) (WC) (actually: all shops that use our own form renderer)
-----------------------
Bugs:
- WC: TypeError: Siel\Acumulus\Helpers\FormRenderer::addAttribute(): Argument #3 ($value)
  must be of type array|string|bool|null, int given, called in Helpers/FormRenderer.php